<resources>
    <!-- POLSKIE -->
    <string name="app_name">StepTracker</string>
    <string name="title_activity_spacer">Spacer</string>

    <!-- Layout -->
    <string name="dzien">Wędrówka dnia: </string>
    <string name="kalorie">Spalone kalorie:</string>
    <string name="kroki">Ilość kroków:</string>
    <string name="dystans">Dystans przebyty:</string>
    <string name="rozpocznij">Rozpocznij wędrówkę</string>
    <string name="zakoncz">Zakończ wędrówkę</string>

    <!-- MainActivity -->
    <string name="t">Tak</string>
    <string name="n">Nie</string>
    <string name="noaccel">Brak czujnika akcelerometru</string>
    <string name="nolok">Do wyświetlenia mapy wymagane jest uprawnienie do lokalizacji</string>
    <string name="niestabil">Czy chcesz otrzymywać powiadomienia o niestabilnym chodzie?</string>
    <string name="cleardb">Wszystkie dane zostały usunięte!</string>
    <string name="logout">Wylogowano się pomyślnie!</string>
    <string name="user_location_marker">Jesteś tutaj</string>
    <string name="no_gyroscope">Brak czujnika żyroskopu</string>
    <string name="no_barometer">Brak czujnika barometru</string>
    <string name="settings">Ustawienia</string>
    <string name="main_screen">Ekran główny</string>
    <string name="account">Konto</string>
    <string name="disable_sudden_movement_alerts_prompt">Alerty o nagłym ruchu są włączone. Czy chcesz je wyłączyć?</string>
    <string name="enable_sudden_movement_alerts_prompt">Alerty o nagłym ruchu są wyłączone. Czy chcesz je włączyć?</string>
    <string name="sudden_movement_alerts_on_toast">Alerty o nagłym ruchu włączone</string>
    <string name="sudden_movement_alerts_off_toast">Alerty o nagłym ruchu wyłączone</string>
    <string name="alert">Alert</string>
    <string name="export_data_prompt_csv">Czy chcesz wyeksportować dane do pliku CSV?</string>
    <string name="export_data_title">Eksport danych</string>
    <string name="clear_all_data_prompt">Czy chcesz wyczyścić WSZYSTKIE dane?</string>
    <string name="csv_header">ID,Distance,Steps,Calories,UserID
</string>
    <string name="data_exported_to_downloads">Dane wyeksportowane do folderu Pobrane</string>
    <string name="data_export_error">Błąd podczas eksportu danych</string>
    <string name="meters_unit"> m</string>
    <string name="kilometers">km</string>
    <string name="kcal_unit"> kcal</string>
    <string name="day_comparison_title">Porównanie dni</string>
    <string name="no_previous_data">Brak danych z poprzedniego dnia.</string>
    <string name="ok">OK</string>
    <string name="previous_day">Poprzedni dzień:</string>
    <string name="current_day">Obecny dzień:</string>
    <string name="distance_label">Dystans:</string>
    <string name="steps_label">Kroki:</string>
    <string name="calories_label">Kalorie:</string>
    <string name="sudden_movement_detected">Wykryto nagły ruch! Wszystko w porządku?</string>
    <string name="weekly_report_title">Raport tygodniowy</string>
    <string name="previous_week_report">Poprzedni tydzień:</string>
    <string name="current_week_report">Obecny tydzień:</string>
    <string name="not_enough_data_for_report">Brak wystarczających danych do wygenerowania raportu.</string>
    <string name="disable_weekly_report_alerts_prompt">Cotygodniowe raporty są włączone. Czy chcesz je wyłączyć?</string>
    <string name="enable_weekly_report_alerts_prompt">Cotygodniowe raporty są wyłączone. Czy chcesz je włączyć?</string>
    <string name="weekly_report_alerts_on_toast">Cotygodniowe raporty włączone</string>
    <string name="weekly_report_alerts_off_toast">Cotygodniowe raporty wyłączone</string>
    <string name="sudden_movement_marker_title">Wykryto nagły ruch</string>
    <string name="incident_marker_removed_toast">Usunięto ostatni znacznik incydentu</string>
    <string name="cannot_delete_first_marker">Nie można usunąć pierwszego znacznika</string>
    <string name="no_incident_markers_to_remove_toast">Brak znaczników incydentów do usunięcia</string>
    <string name="no_field">Wypełnij wszystkie pola!</string>
    <string name="start">Wędrówka rozpoczęta!</string>
    <string name="good_luck">Powodzenia w trasie!</string>


    <!-- LoginActivity -->
    <string name="login_successful">Zalogowano pomyślnie!</string>
    <string name="login_failed">Błędny login lub hasło!</string>
    <string name="log_in">Zaloguj</string>
    <string name="gotoregister">Przejdź do rejestracji</string>
    <string name="remember_me">Zapamiętaj mnie</string>
    <string name="enteryourlogin">Wpisz swój login:</string>
    <string name="enteryourpassword">Wpisz swoje hasło:</string>
    <string name="logg">Logowanie</string>

    <!-- RegisterActivity -->
    <string name="passwords_not_matching">Hasła nie są takie same!</string>
    <string name="registration_successful">Rejestracja zakończona sukcesem!</string>
    <string name="user_already_exists">Błąd: użytkownik już istnieje!</string>

    <!-- Formatted strings -->
    <string name="dzien_formatted">Wędrówka dnia %1$s</string>
    <string name="dystans_formatted">Dystans przebyty: %.2f %s</string>
    <string name="kroki_formatted">Ilość kroków: %d</string>
    <string name="kalorie_formatted">Spalone kalorie: %d %s</string>

    <!-- activity_register.xml -->
    <string name="register_title">Rejestracja</string>
    <string name="login_hint">Login</string>
    <string name="weight_hint">Waga</string>
    <string name="password_hint">Hasło</string>
    <string name="repeat_password_hint">Powtórz hasło</string>
    <string name="register_button">Zarejestruj się</string>
    <string name="go_to_login_button">Przejdź do logowania</string>
    <string name="close_button_content_description">Zamknij</string>

    <!-- SettingsActivity -->
    <string name="notifications_on">Powiadomienia włączone</string>
    <string name="notifications_off">Powiadomienia wyłączone</string>
    <string name="turn_notifications">Włącz powiadomienia:</string>
    <string name="change_theme">Przełącz motyw</string>
    <string name="change_language">Zmień język</string>
    <string name="safe_mode">Tryb bezpieczny</string>
    <string name="units">Jednostki:</string>
    <string name="alerts_info">Włączenie tej opcji skutkuje wysyłaniem alertów w momencie wykrycia niestabilnego chodu u użytkownika.</string>
    <string name="distance_units">Jednostki:</string>

    <!-- AccountActivity -->
    <string name="my_account">Moje konto</string>
    <string name="users_info">Dane użytkownika</string>
    <string name="login">Login:</string>
    <string name="password">Hasło:</string>
    <string name="phone">Numer telefonu:</string>
    <string name="age">Wiek:</string>
    <string name="weight">Waga:</string>
    <string name="enter">Naciśnij aby wprowadzić</string>
    <string name="save_changes">Zapisz zmiany</string>

    <!-- home menu -->
    <string name="alerts">Alerty o niestabilnym chodzie</string>
    <string name="weekly_reports">Cotygodniowe raporty</string>
    <string name="show_markers">Pokazuj znaczniki na mapie</string>
    <string name="delete_marker">Usuń znacznik</string>
    <string name="compare_day">Porównaj dzień</string>
    <string name="data_export">Eksport danych</string>
    <string name="delete_data">Usuń dane</string>
    <string name="log_out">Wyloguj</string>
    <string name="filled_database">Wypełnij bazę fikcyjnymi danymi</string>

    <!-- bottom menu -->
    <string name="b_settings">Ustawienia</string>
    <string name="b_home_screen">Ekran Główny</string>
    <string name="b_my_account">Moje Konto</string>


</resources>