<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <item
        android:title="@string/weekly_reports"
        android:id="@+id/raporty"
        />

    <item
        android:title="@string/show_markers"
        android:id="@+id/pznaczniki"
        />

    <item
        android:title="@string/delete_marker"
        android:id="@+id/uznacznik"
        />

    <item
        android:title="@string/compare_day"
        android:id="@+id/pdzien"
        />

    <item
        android:title="@string/data_export"
        android:id="@+id/edane"
        />

    <item
        android:title="@string/delete_data"
        android:id="@+id/udane"
        />

    <item
        android:title="@string/log_out"
        android:id="@+id/wyloguj"/>

    <item
        android:title="@string/filled_database"
        android:id="@+id/debug_fill_data"/>



</menu>