<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/b_dark"
    android:padding="0dp">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/my_account"
        android:textColor="@color/t_dark"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAccountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/users_info"
        android:textColor="@color/t_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/etUsername1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_rounded_dark"
        android:padding="13dp"
        android:text="@string/login"
        android:textColor="@color/t_dark"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAccountTitle" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/edittext_rounded_dark"
        android:textColor="@color/white"
        android:hint="@string/enter"
        android:inputType="text"
        android:padding="10.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvAccountTitle"
        android:drawableEnd="@drawable/ic_clear_white"
        android:textColorHint="@color/white"/>

    <TextView
        android:id="@+id/etPassword1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:background="@drawable/edittext_rounded_dark"
        android:padding="13dp"
        android:text="@string/password"
        android:textColor="@color/t_dark"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAccountTitle" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/edittext_rounded_dark"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/enter"
        android:inputType="textPassword"
        android:padding="10.5dp"
        android:drawableEnd="@drawable/ic_eye_off_white"
        android:drawablePadding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvAccountTitle" />



    <TextView
        android:id="@+id/etPhone1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_rounded_dark"
        android:padding="13dp"
        android:text="@string/phone"
        android:textColor="@color/t_dark"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgAvatar" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:background="@drawable/edittext_rounded_dark"
        android:hint="@string/enter"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="phone"
        android:padding="10.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imgAvatar"
        android:drawableEnd="@drawable/ic_clear_white" />

    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:contentDescription="Avatar użytkownika"
        android:scaleType="centerCrop"
        android:src="@drawable/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <TextView
        android:id="@+id/etAge1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:background="@drawable/edittext_rounded_dark"
        android:padding="13dp"
        android:text="@string/age"
        android:textColor="@color/t_dark"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgAvatar" />


    <EditText
        android:id="@+id/etAge"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:background="@drawable/edittext_rounded_dark"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/enter"
        android:inputType="phone"
        android:padding="10.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imgAvatar"
        android:drawableEnd="@drawable/ic_clear_white" />



    <TextView
        android:id="@+id/etWaga1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:background="@drawable/edittext_rounded_dark"
        android:padding="13dp"
        android:text="@string/weight"
        android:textColor="@color/t_dark"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgAvatar"/>

    <EditText
        android:id="@+id/etWaga"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="252dp"
        android:background="@drawable/edittext_rounded_dark"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/enter"
        android:inputType="phone"
        android:padding="10.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imgAvatar"
        android:drawableEnd="@drawable/ic_clear_white" />


    <Button
        android:id="@+id/btnSave"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="704dp"
        android:background="@drawable/edittext_rounded_dark"
        android:inputType="text"
        android:text="@string/save_changes"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        app:itemIconSize="32dp"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>
